--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-prompt": "^1.3.0",
+    "grunt-replace": "^0.8.0",
     "grunt-sass": "^1.1.0",
     "grunt-shell": "^1.1.2",
     "grunt-template": "^0.2.3",
